---
config:
  theme: 'forest'
---

erDiagram
    direction LR
    STUDY {
        int id PK
        string name
        datetime publication_date
        authors string
    }

    Dataset {
        int id PK
        string name
        string description
        string pegRNA_delivery_method
        string pe_delivery_method
        string edit_scope
        string experimental_method
        string target_context
        boolean standardizable
        int study_id FK
    }

    Datasheet {
        int id PK
        string file_path
        int dataset_id FK
        string cell_line
        string pe_system
        int scaffold_id
        int num_samples
    }

    Scaffold {
        int id PK
        string sequence
        string name
        string description
    }

    STUDY ||--o{ Dataset: contains
    Dataset ||--o{ Datasheet: includes